--- a/StoreMVC/Views/Shared/_Layout.cshtml
+++ b/StoreMVC/Views/Shared/_Layout.cshtml
@@ -37,6 +37,12 @@
                         <li class="nav-item">
                             <a class="nav-link text-dark" asp-area="" asp-controller="Store" asp-action="GetAllStoreProducts">Browse Products</a>
                         </li>
+                        <li class="nav-item">
+                            <a class="nav-link text-dark" asp-area="" asp-controller="Store" asp-action="AddProduct">Add a Product</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link text-dark" asp-area="" asp-controller="Store" asp-action="SelectDeleteProduct">Select A Product to Delete</a>
+                        </li>
                     </ul>
                 </div>
             </div>
