--- a/StoreMVC/Views/Shared/_Layout.cshtml
+++ b/StoreMVC/Views/Shared/_Layout.cshtml
@@ -46,6 +46,9 @@
                         <li class="nav-item">
                             <a class="nav-link text-dark" asp-area="" asp-controller="Store" asp-action="SelectProductToUpdate">Select A Product to Update</a>
                         </li>
+                        <li class="nav-item">
+                            <a class="nav-link text-dark" asp-area="" asp-controller="Store" asp-action="ViewShoppingCart">View Shopping Cart</a>
+                        </li>
                     </ul>
                 </div>
             </div>
